--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "chart.js": "^2.9.4",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "vue-chartjs": "^3.5.1"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.3",
